<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/celebration_top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <TextView
                style="@style/headingTextPrimary"
                android:layout_weight="0.7"
                android:drawablePadding="@dimen/_35sdp"
                android:text="@string/behaviour"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_size_large"
                app:drawableStartCompat="@drawable/ic_behavior" />

            <TextView
                style="@style/textViewCelebrations"
                android:text="humble" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <TextView
                style="@style/headingTextPrimary"
                android:layout_weight="0.7"
                android:drawablePadding="@dimen/_35sdp"
                android:text="@string/punctuality"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_size_large"
                app:drawableStartCompat="@drawable/ic_punctuality" />

            <TextView
                style="@style/textViewCelebrations"
                android:text="outstanding" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <TextView
                style="@style/headingTextPrimary"
                android:layout_weight="0.7"
                android:drawablePadding="@dimen/_35sdp"
                android:text="Conduct"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_size_large"
                app:drawableStartCompat="@drawable/ic_conduct" />

            <TextView
                style="@style/textViewCelebrations"
                android:text="above charts" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_margin="@dimen/_25sdp"
            android:elevation="@dimen/_10sdp"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_61sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/van" />

            <TextView
                style="@style/textViewCelebrations"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_30sdp"
                android:gravity="end|center_horizontal"
                android:text="@string/free_yes_free_next_3_rides" />

            <TextView
                style="@style/headingTextPrimary"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/a_gift_for_being_awesome_swvler" />

            <TextView
                style="@style/textViewCelebrations"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/apply_coupon"
                android:textSize="@dimen/text_size_moderate" />

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>