<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:scaleType="fitXY"
                android:src="@drawable/square" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvImdbRating"
                    style="@style/headingTextPrimary"
                    android:drawableStart="@drawable/ic_imdb"
                    android:text="8/10"
                    android:textColor="@color/cc_orange" />

                <TextView
                    android:id="@+id/tvMovieName"
                    style="@style/headingTextPrimary"
                    android:layout_gravity="bottom|center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_larger"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tvDirector"
            style="@style/headingTextPrimary"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/tvDuration"
            style="@style/headingTextPrimary"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/tvMovieDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvCast"
            style="@style/headingTextPrimary"
            android:ellipsize="end"
            android:text="@string/cast" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMoreLikeThis"
            style="@style/headingTextPrimary"
            android:ellipsize="end"
            android:text="@string/more_like_this" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMoreLikeThis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/tvEmptyMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_not_found"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/ic_favorite" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>